--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
+*.log
+*.*db*
 *.swp
+*.*db*
+*.json
+*.code
 *.osm
 *.o
+src/GPU*
+src/*Cache*
+src/Cooki*
+src/Network*
 draw.cpp
 test.cpp
 build/
 bin/
 lib/
+src/logs/20200125T013948/output_1_20200125T013949/tasks.log
